objects/ESB_Batch_Load_Stat__c.object
<CustomObject>
    <description>ESB Batch Job Stats</description>
    <fields>
        <fullName>Batch_Job_Instance_Id__c</fullName>
        <label>Batch Job Instance Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elapsed_Time_In_Millis__c</fullName>
        <label>Elapsed Time In Millis</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed_On_Input_Phase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed On Input Phase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Failed_On_Loading_Phase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed On Loading Phase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Failed_Records__c</fullName>
        <label>Failed Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Input_Phase_Exception__c</fullName>
        <label>Input Phase Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loaded_Records__c</fullName>
        <label>Loaded Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loading_Phase_Exception__c</fullName>
        <label>Loading Phase Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Complete_PhaseException__c</fullName>
        <label>On Complete PhaseException</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_Records__c</fullName>
        <label>Processed Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Number__c</fullName>
        <label>Run Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successful_Records__c</fullName>
        <label>Successful Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Records__c</fullName>
        <label>Total Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>failedOnCompletePhase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed On Complete Phase</label>
        <type>Checkbox</type>
    </fields>
    <label>ESB Batch Job Stat</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LOB__c</columns>
        <columns>Run_Number__c</columns>
        <columns>Entity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Loaded_Records__c</columns>
        <columns>Processed_Records__c</columns>
        <columns>Successful_Records__c</columns>
        <columns>Total_Records__c</columns>
        <columns>Failed_Records__c</columns>
        <columns>Batch_Job_Instance_Id__c</columns>
        <columns>Failed_On_Loading_Phase__c</columns>
        <columns>Failed_On_Input_Phase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>9/6/2017 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllFailures</fullName>
        <columns>NAME</columns>
        <columns>LOB__c</columns>
        <columns>Run_Number__c</columns>
        <columns>Entity__c</columns>
        <columns>Loaded_Records__c</columns>
        <columns>Processed_Records__c</columns>
        <columns>Successful_Records__c</columns>
        <columns>Total_Records__c</columns>
        <columns>Failed_Records__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Batch_Job_Instance_Id__c</columns>
        <columns>Failed_On_Loading_Phase__c</columns>
        <columns>Failed_On_Input_Phase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Failed_Records__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Failures</label>
    </listViews>
    <nameField>
        <displayFormat>ESBStat-{000000}</displayFormat>
        <label>ESB_Batch_Load_Stat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ESB Batch Job Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>